--- a/config.toml
+++ b/config.toml
@@ -43,7 +43,7 @@ googleAnalytics = ""
 	math = true
 
 	# Optional 80x80 avatar image.
-	avatar = "/img/biblio-cote-resize.jpg"
+	avatar = "/img/biblio.jpg"
 
 	# Optional favicons for website
 	favicon = true
